@@ -6,6 +6,7 @@ CHANGES in VERSION 1.9.3
 * when `gap` is set for the main heatmap, other heatmps also adjust their `gap` values to it
 * fixed a bug that when rownames/colnames are not complete, dendrograms are corrupted
 * `alter_fun` now supports adding graphics grid by grid
+* add `show_pct` option in `oncoPrint()`
 
 ==============================
 
